changed bg color

--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -8,5 +8,5 @@
 /* Pushes it from behind sidebar */
 .App {
     margin-left: 100px;
-    background-color: #5C5470;
+    background-color: #282829;
 }
