--- a/src/components/Menu/menuStyles.css
+++ b/src/components/Menu/menuStyles.css
@@ -1,7 +1,7 @@
 .side-nav {
     width: 100px;
     height: 100%;
-    background: #352F44;
+    background: #19191a;
     position: fixed;
     top: 0;
     left: 0;
@@ -10,13 +10,17 @@
 }
 
 .logo {
-    display: block;
-    margin-bottom: 10px;
-    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 15px;
 }
 
-.logo-img {
-    width: 80px;
+.home-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-links {
@@ -27,15 +31,29 @@
     justify-content: center;
 }
 
-.nav-links li {
-    padding: 8px 10%;
+
+.graph {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    height: 25px;
+    width: 100%;
+    background-color: #282829;
+    color: #fff;
+    border: none;
+    margin-top: 10px;
 }
 
+.graph:hover {
+    background-color: #5C5470;
+    cursor: pointer;
+}
 .add-graph {
     display: flex;
     justify-content: center;
     width: 40px;
-    cursor:pointer;
     height: 40px;
     background: #5C5470;
     border-radius: 50%;
@@ -46,5 +64,5 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
-    font-size: 1.65rem;
+    font-size: 1.25em;
 }
