--- a/src/components/Menu/menuStyles.css
+++ b/src/components/Menu/menuStyles.css
@@ -55,7 +55,7 @@
     justify-content: center;
     width: 40px;
     height: 40px;
-    background: #5C5470;
+    background: linear-gradient(45deg, #e069a5, #b85bdd);
     border-radius: 50%;
     margin: 10px auto;
 }
